MAJOR: reflection removed from TypicalConditions (TypicalConditionImpl classes also removed). As a prerequisite, StorableObject parameterized.